--- a/bin/main/glade/VR_Main.glade
+++ b/bin/main/glade/VR_Main.glade
@@ -2,7 +2,7 @@
 <!-- Generated with glade 3.18.3 -->
 <interface>
   <requires lib="gtk+" version="3.0"/>
-  <object class="GtkApplicationWindow" id="window1">
+  <object class="GtkWindow" id="window1">
     <property name="can_focus">False</property>
     <child>
       <object class="GtkBox" id="box1">
@@ -19,6 +19,7 @@
                 <property name="use_action_appearance">False</property>
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
+                <property name="label" translatable="yes">File</property>
                 <child type="submenu">
                   <object class="GtkMenu" id="menu1">
                     <property name="visible">True</property>
@@ -28,6 +29,7 @@
                         <property name="use_action_appearance">False</property>
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
+                        <property name="label" translatable="yes">New Project</property>
                       </object>
                     </child>
                     <child>
@@ -35,7 +37,8 @@
                         <property name="use_action_appearance">False</property>
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
-                        <property name="tooltip_text" translatable="yes">Create a new, blank document in a tab.</property>
+                        <property name="tooltip_text" translatable="yes">Create a new, blank script in a tab.</property>
+                        <property name="label" translatable="yes">New Blank Script</property>
                       </object>
                     </child>
                     <child>
@@ -43,7 +46,8 @@
                         <property name="use_action_appearance">False</property>
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
-                        <property name="tooltip_text" translatable="yes">Creates a working window script that you can edit.</property>
+                        <property name="tooltip_text" translatable="yes">Creates a skeleton Window Script</property>
+                        <property name="label" translatable="yes">New Window Script</property>
                       </object>
                     </child>
                     <child>
@@ -52,6 +56,7 @@
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="tooltip_text" translatable="yes">Saves all documents in the tabs to disk.</property>
+                        <property name="label" translatable="yes">Save All</property>
                       </object>
                     </child>
                     <child>
@@ -60,6 +65,7 @@
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="tooltip_text" translatable="yes">Saves the current tab to a file.</property>
+                        <property name="label" translatable="yes">Save As</property>
                       </object>
                     </child>
                     <child>
@@ -68,6 +74,7 @@
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="tooltip_text" translatable="yes">Close all documents opened in the tabs.</property>
+                        <property name="label" translatable="yes">Close All</property>
                       </object>
                     </child>
                     <child>
@@ -81,6 +88,7 @@
                         <property name="use_action_appearance">False</property>
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
+                        <property name="label" translatable="yes">Quit</property>
                       </object>
                     </child>
                   </object>
@@ -92,6 +100,7 @@
                 <property name="use_action_appearance">False</property>
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
+                <property name="label" translatable="yes">Tools</property>
                 <child type="submenu">
                   <object class="GtkMenu" id="menu3">
                     <property name="visible">True</property>
@@ -102,6 +111,7 @@
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="tooltip_text" translatable="yes">Will create a .gemspec file that defines this project.  When you build your gem, it uses this file.</property>
+                        <property name="label" translatable="yes">Create Gemspec File</property>
                       </object>
                     </child>
                     <child>
@@ -110,6 +120,7 @@
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="tooltip_text" translatable="yes">Create a free account on rubygems.org so you can upload and share your gems.</property>
+                        <property name="label" translatable="yes">Make RubyGems Account</property>
                       </object>
                     </child>
                     <child>
@@ -118,6 +129,7 @@
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="tooltip_text" translatable="yes">Creates a launcher on your destop for this project.</property>
+                        <property name="label" translatable="yes">Create Desktop Launcher</property>
                       </object>
                     </child>
                     <child>
@@ -125,6 +137,7 @@
                         <property name="use_action_appearance">False</property>
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
+                        <property name="label" translatable="yes">Global Settings</property>
                       </object>
                     </child>
                     <child>
@@ -133,6 +146,7 @@
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="tooltip_text" translatable="yes">Edit all user preferences for Visual Ruby.</property>
+                        <property name="label" translatable="yes">Project Settings</property>
                       </object>
                     </child>
                   </object>
@@ -144,6 +158,7 @@
                 <property name="use_action_appearance">False</property>
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
+                <property name="label" translatable="yes">Help</property>
                 <child type="submenu">
                   <object class="GtkMenu" id="menu">
                     <property name="visible">True</property>
@@ -154,6 +169,7 @@
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="tooltip_text" translatable="yes">Visit visualruby.net for complete tutorials on using Visual Ruby</property>
+                        <property name="label" translatable="yes">Online Tutorails</property>
                       </object>
                     </child>
                     <child>
@@ -162,6 +178,7 @@
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="tooltip_text" translatable="yes">This will copy exaple code into a folder named visualruby_examples in your home directory.</property>
+                        <property name="label" translatable="yes">Install Examples</property>
                       </object>
                     </child>
                   </object>
@@ -533,6 +550,7 @@
                   <object class="GtkBox" id="box3">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
+                    <property name="margin_left">10</property>
                     <property name="spacing">10</property>
                     <child>
                       <object class="GtkRadioButton" id="radioOnDisk">
@@ -559,6 +577,7 @@
                         <property name="can_focus">True</property>
                         <property name="receives_default">False</property>
                         <property name="xalign">0</property>
+                        <property name="active">True</property>
                         <property name="draw_indicator">True</property>
                         <property name="group">radioOnDisk</property>
                       </object>
@@ -590,7 +609,6 @@
                   <object class="GtkBox" id="vboxTabs">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
-                    <property name="margin_bottom">59</property>
                     <property name="orientation">vertical</property>
                     <child>
                       <placeholder/>
