--- a/examples/child_window/bin/glade/ModelessWindow.glade
+++ b/examples/child_window/bin/glade/ModelessWindow.glade
@@ -4,24 +4,24 @@
   <requires lib="gtk+" version="3.0"/>
   <object class="GtkWindow" id="window1">
     <property name="can_focus">False</property>
-    <property name="modal">True</property>
+    <property name="title" translatable="yes">Modeless Window</property>
     <property name="window_position">center</property>
     <child>
       <object class="GtkBox" id="box1">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
-        <property name="margin_left">30</property>
-        <property name="margin_right">30</property>
-        <property name="margin_top">30</property>
-        <property name="margin_bottom">30</property>
+        <property name="margin_left">20</property>
+        <property name="margin_right">20</property>
+        <property name="margin_top">20</property>
+        <property name="margin_bottom">20</property>
         <property name="orientation">vertical</property>
+        <property name="spacing">15</property>
         <child>
-          <object class="GtkLabel" id="labelMessage">
+          <object class="GtkLabel" id="label1">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
-            <property name="xpad">80</property>
-            <property name="ypad">20</property>
-            <property name="label" translatable="yes">label</property>
+            <property name="label" translatable="yes">This window operates concurrently with the parent.  
+Open as many as you want!</property>
           </object>
           <packing>
             <property name="expand">True</property>
@@ -33,16 +33,17 @@
           <object class="GtkButtonBox" id="buttonbox1">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
-            <property name="layout_style">spread</property>
+            <property name="orientation">vertical</property>
+            <property name="layout_style">start</property>
             <child>
-              <object class="GtkButton" id="buttonCancel">
-                <property name="label" translatable="yes">Cancel</property>
+              <object class="GtkButton" id="buttonOk">
+                <property name="label" translatable="yes">Ok</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
               </object>
               <packing>
-                <property name="expand">False</property>
+                <property name="expand">True</property>
                 <property name="fill">True</property>
                 <property name="position">0</property>
               </packing>
