--- a/bin/main/glade/NewProjectGUI.glade
+++ b/bin/main/glade/NewProjectGUI.glade
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.16.1 -->
+<!-- Generated with glade 3.18.3 -->
 <interface>
   <requires lib="gtk+" version="3.0"/>
   <object class="GtkWindow" id="window1">
@@ -8,6 +8,7 @@
     <property name="can_focus">False</property>
     <property name="margin_top">1</property>
     <property name="title" translatable="yes">New Project</property>
+    <property name="modal">True</property>
     <property name="window_position">center</property>
     <property name="default_width">440</property>
     <property name="default_height">250</property>
@@ -62,8 +63,8 @@ You are free to move the project later.</property>
               <object class="GtkLabel" id="labelHomePath">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="xalign">1</property>
                 <property name="label" translatable="yes">/home/visualruby/</property>
+                <property name="xalign">1</property>
               </object>
               <packing>
                 <property name="expand">False</property>
