--- a/vrlib/lib/glade/Alert.glade
+++ b/vrlib/lib/glade/Alert.glade
@@ -41,7 +41,7 @@
             <property name="wrap">True</property>
           </object>
           <packing>
-            <property name="expand">False</property>
+            <property name="expand">True</property>
             <property name="fill">True</property>
             <property name="position">1</property>
           </packing>
