--- a/vrlib/lib/glade/Alert.glade
+++ b/vrlib/lib/glade/Alert.glade
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.16.1 -->
+<!-- Generated with glade 3.18.3 -->
 <interface>
   <requires lib="gtk+" version="3.0"/>
   <object class="GtkWindow" id="window1">
@@ -38,6 +38,7 @@
             <property name="can_focus">False</property>
             <property name="margin_top">10</property>
             <property name="label" translatable="yes">label</property>
+            <property name="use_markup">True</property>
             <property name="wrap">True</property>
           </object>
           <packing>
