--- a/bin/main/glade/VR_Main.glade
+++ b/bin/main/glade/VR_Main.glade
@@ -230,6 +230,20 @@
               </packing>
             </child>
             <child>
+              <object class="GtkToolButton" id="toolHome">
+                <property name="visible">True</property>
+                <property name="can_focus">False</property>
+                <property name="tooltip_text" translatable="yes">Home Project</property>
+                <property name="label" translatable="yes">Home</property>
+                <property name="use_underline">True</property>
+                <property name="stock_id">gtk-home</property>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="homogeneous">True</property>
+              </packing>
+            </child>
+            <child>
               <object class="GtkSeparatorToolItem" id="toolbutton2">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
