--- a/bin/main/glade/OpenProject.glade
+++ b/bin/main/glade/OpenProject.glade
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.18.3 -->
+<!-- Generated with glade 3.16.1 -->
 <interface>
   <requires lib="gtk+" version="3.0"/>
   <object class="GtkWindow" id="window1">
@@ -10,6 +10,7 @@
     <property name="title" translatable="yes">Open Project</property>
     <property name="modal">True</property>
     <property name="window_position">center</property>
+    <property name="destroy_with_parent">True</property>
     <child>
       <object class="GtkBox" id="box1">
         <property name="visible">True</property>
