--- a/bin/main/glade/VR_Main.glade
+++ b/bin/main/glade/VR_Main.glade
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.18.3 -->
+<!-- Generated with glade 3.16.1 -->
 <interface>
   <requires lib="gtk+" version="3.0"/>
   <object class="GtkWindow" id="window1">
@@ -376,7 +376,6 @@
               <object class="GtkPaned" id="panelMain">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
-                <property name="wide_handle">True</property>
                 <child>
                   <object class="GtkBox" id="box3">
                     <property name="visible">True</property>
@@ -402,8 +401,8 @@
                           <object class="GtkLabel" id="labelFiles">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
-                            <property name="label" translatable="yes">Files</property>
                             <property name="yalign">0.41999998688697815</property>
+                            <property name="label" translatable="yes">Files</property>
                           </object>
                           <packing>
                             <property name="tab_fill">False</property>
@@ -479,6 +478,8 @@
                           <packing>
                             <property name="left_attach">0</property>
                             <property name="top_attach">0</property>
+                            <property name="width">1</property>
+                            <property name="height">1</property>
                           </packing>
                         </child>
                         <child>
@@ -493,6 +494,8 @@
                           <packing>
                             <property name="left_attach">0</property>
                             <property name="top_attach">1</property>
+                            <property name="width">1</property>
+                            <property name="height">1</property>
                           </packing>
                         </child>
                         <child>
@@ -508,6 +511,8 @@
                           <packing>
                             <property name="left_attach">1</property>
                             <property name="top_attach">1</property>
+                            <property name="width">1</property>
+                            <property name="height">1</property>
                           </packing>
                         </child>
                         <child>
@@ -551,6 +556,8 @@
                           <packing>
                             <property name="left_attach">1</property>
                             <property name="top_attach">0</property>
+                            <property name="width">1</property>
+                            <property name="height">1</property>
                           </packing>
                         </child>
                       </object>
@@ -617,7 +624,6 @@
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="orientation">vertical</property>
-                    <property name="wide_handle">True</property>
                     <child>
                       <object class="GtkBox" id="boxTabs">
                         <property name="visible">True</property>
@@ -656,7 +662,6 @@
               <packing>
                 <property name="expand">True</property>
                 <property name="fill">True</property>
-                <property name="padding">8</property>
                 <property name="position">1</property>
               </packing>
             </child>
