--- a/bin/main/glade/OpenProject.glade
+++ b/bin/main/glade/OpenProject.glade
@@ -5,12 +5,11 @@
   <object class="GtkWindow" id="window1">
     <property name="width_request">600</property>
     <property name="height_request">500</property>
-    <property name="visible">True</property>
     <property name="can_focus">False</property>
     <property name="title" translatable="yes">Open Project</property>
     <property name="modal">True</property>
     <property name="window_position">center</property>
-    <property name="destroy_with_parent">True</property>
+    <property name="type_hint">dialog</property>
     <child>
       <object class="GtkBox" id="box1">
         <property name="visible">True</property>
