--- a/bin/main/glade/VR_Main.glade
+++ b/bin/main/glade/VR_Main.glade
@@ -4,6 +4,7 @@
   <requires lib="gtk+" version="3.0"/>
   <object class="GtkWindow" id="window1">
     <property name="can_focus">False</property>
+    <property name="modal">True</property>
     <property name="window_position">center</property>
     <child>
       <object class="GtkBox" id="box1">
