--- a/examples/alert_box/bin/glade/AlertBoxDemo.glade
+++ b/examples/alert_box/bin/glade/AlertBoxDemo.glade
@@ -71,23 +71,23 @@ This just shows a message on the screen.  Its very useful for alerts and debuggi
               </packing>
             </child>
             <child>
-              <object class="GtkLabel" id="label4">
+              <object class="GtkLabel" id="label2">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="xalign">0</property>
-                <property name="label" translatable="yes">&lt;big&gt;Ask Any Question&lt;/big&gt;
-Change the text on the buttons to ask anything</property>
+                <property name="label" translatable="yes">&lt;big&gt;Yes/No Example&lt;/big&gt;
+Ask the user a yes/no question by changing the text on the buttons.</property>
                 <property name="use_markup">True</property>
               </object>
               <packing>
                 <property name="left_attach">0</property>
-                <property name="top_attach">4</property>
+                <property name="top_attach">1</property>
                 <property name="width">1</property>
                 <property name="height">1</property>
               </packing>
             </child>
             <child>
-              <object class="GtkButton" id="buttonQuestion">
+              <object class="GtkButton" id="buttonYesNo">
                 <property name="label" translatable="yes">Try</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
@@ -96,7 +96,7 @@ Change the text on the buttons to ask anything</property>
               </object>
               <packing>
                 <property name="left_attach">1</property>
-                <property name="top_attach">4</property>
+                <property name="top_attach">1</property>
                 <property name="width">1</property>
                 <property name="height">1</property>
               </packing>
@@ -112,7 +112,7 @@ This example shows how you can ask the user to enter text into a textbox.</prope
               </object>
               <packing>
                 <property name="left_attach">0</property>
-                <property name="top_attach">3</property>
+                <property name="top_attach">2</property>
                 <property name="width">1</property>
                 <property name="height">1</property>
               </packing>
@@ -127,29 +127,29 @@ This example shows how you can ask the user to enter text into a textbox.</prope
               </object>
               <packing>
                 <property name="left_attach">1</property>
+                <property name="top_attach">2</property>
+                <property name="width">1</property>
+                <property name="height">1</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkLabel" id="label4">
+                <property name="visible">True</property>
+                <property name="can_focus">False</property>
+                <property name="xalign">0</property>
+                <property name="label" translatable="yes">&lt;big&gt;Ask Any Question&lt;/big&gt;
+Change the text on the buttons to ask anything</property>
+                <property name="use_markup">True</property>
+              </object>
+              <packing>
+                <property name="left_attach">0</property>
                 <property name="top_attach">3</property>
                 <property name="width">1</property>
                 <property name="height">1</property>
               </packing>
             </child>
             <child>
-              <object class="GtkLabel" id="label2">
-                <property name="visible">True</property>
-                <property name="can_focus">False</property>
-                <property name="xalign">0</property>
-                <property name="label" translatable="yes">&lt;big&gt;Yes/No Example&lt;/big&gt;
-Ask the user a yes/no question by changing the text on the buttons.</property>
-                <property name="use_markup">True</property>
-              </object>
-              <packing>
-                <property name="left_attach">0</property>
-                <property name="top_attach">2</property>
-                <property name="width">1</property>
-                <property name="height">1</property>
-              </packing>
-            </child>
-            <child>
-              <object class="GtkButton" id="buttonYesNo">
+              <object class="GtkButton" id="buttonQuestion">
                 <property name="label" translatable="yes">Try</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
@@ -158,38 +158,7 @@ Ask the user a yes/no question by changing the text on the buttons.</property>
               </object>
               <packing>
                 <property name="left_attach">1</property>
-                <property name="top_attach">2</property>
-                <property name="width">1</property>
-                <property name="height">1</property>
-              </packing>
-            </child>
-            <child>
-              <object class="GtkLabel" id="label6">
-                <property name="visible">True</property>
-                <property name="can_focus">False</property>
-                <property name="xalign">0</property>
-                <property name="label" translatable="yes">&lt;big&gt;Simple Input Box Example&lt;/big&gt;
-This just prompts the user for input in one line of code.</property>
-                <property name="use_markup">True</property>
-              </object>
-              <packing>
-                <property name="left_attach">0</property>
-                <property name="top_attach">1</property>
-                <property name="width">1</property>
-                <property name="height">1</property>
-              </packing>
-            </child>
-            <child>
-              <object class="GtkButton" id="buttonSimpleInput">
-                <property name="label" translatable="yes">Try</property>
-                <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="receives_default">True</property>
-                <property name="valign">start</property>
-              </object>
-              <packing>
-                <property name="left_attach">1</property>
-                <property name="top_attach">1</property>
+                <property name="top_attach">3</property>
                 <property name="width">1</property>
                 <property name="height">1</property>
               </packing>
@@ -208,7 +177,7 @@ This just prompts the user for input in one line of code.</property>
             <property name="margin_right">20</property>
             <property name="layout_style">end</property>
             <child>
-              <object class="GtkButton" id="buttonQuit">
+              <object class="GtkButton" id="buttonCancel">
                 <property name="label" translatable="yes">Quit</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
