moved everything around.  New name spaces uuh.

--- a/src/main/glade/VR_Main.glade
+++ b/src/main/glade/VR_Main.glade
@@ -328,6 +328,20 @@
                     <property name="homogeneous">True</property>
                   </packing>
                 </child>
+                <child>
+                  <object class="GtkToolButton" id="toolRDoc">
+                    <property name="visible">True</property>
+                    <property name="can_focus">False</property>
+                    <property name="tooltip_text" translatable="yes">Create RDocs for this project.</property>
+                    <property name="label" translatable="yes">RDoc</property>
+                    <property name="use_underline">True</property>
+                    <property name="stock_id">gtk-copy</property>
+                  </object>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="homogeneous">True</property>
+                  </packing>
+                </child>
               </object>
               <packing>
                 <property name="expand">False</property>
